hide etabName in register and update routes

--- a/messagerie/lang/ar/json.json
+++ b/messagerie/lang/ar/json.json
@@ -20,7 +20,7 @@
     "Action Button URL": "رابط زر الحدث",
     "Action Happened At": "تم الإجراء في",
     "Action Initiated By": "تم الإجراء من طرف",
-    "Action Name": "الاسم",
+    "Action Name": "الإسم",
     "Action Status": "الحالة",
     "Action Target": "الهدف",
     "Actions": "الإجراءات",
@@ -529,7 +529,7 @@
     "Multiple Months": "عدة أشهر",
     "Myanmar": "ميانمار",
     "N/A": "غير متاح",
-    "Name": "الاسم",
+    "Name": "الإسم",
     "Namibia": "ناميبيا",
     "Nauru": "ناورو",
     "Nebraska": "نبراسكا",
@@ -747,7 +747,7 @@
     "Scroll to bottom": "الإنتقال للأسفل",
     "Scroll to top": "الإنتقال للأعلى",
     "Search": "بحث",
-    "Search By Name Or E-Mail Address...": "البحث بالاسم أو عنوان البريد الإلكتروني...",
+    "Search By Name Or E-Mail Address...": "البحث بالإسم أو عنوان البريد الإلكتروني...",
     "Search Results": "نتائج البحث",
     "Searching": "جاري البحث",
     "second address line": "العنوان الثاني",
